--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
 	"dependencies": {
 		"bootstrap": "^4.6.0",
 		"jquery": "^3.6.0",
+		"popper.js": "^1.16.1",
 		"prop-types": "^15.7.2",
 		"react": "^16.14.0",
 		"react-dom": "^16.14.0",
